<resources>
    <string name="app_name">SDA Assign3 2019 Colin Fleck</string>
    <string-array name="ui_time_entries">
        <item>" 2"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <item>10</item>
        <item>14</item>
    </string-array>

    <string name="images_desc">Flavors Images</string>
    <string name="plc_version">version</string>
    <string name="plc_flavor">flavor</string>
    <string name="placeholder">Order T shirt</string>

    <string name="customer_name">Name</string>
    <string name="order_message_1">Please find my order attached.</string>
    <string name="order_delivery_message">Deliver my order to the following address:</string>
    <string name="order_message_collect">I will collect it in&#160;</string>
    <string name="order_message_end">Regards,</string>
    <string name="notification_title">Notification!</string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request </string>
    <string name="border">border</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_tab">Welcome to</string>
    <string name="delivery">Delivery</string>
    <string name="collection">Collection</string>
    <string name="deliveryHint">Enter Your Delivery Address</string>
    <string name="collection_text">Select Collection in (days)</string>
    <string name="enter_name">Please enter your name</string>
    <string name="send_order">SEND ORDER</string>
    <string name="take_photo">Take photo for your product</string>
    <string name="plc_product">product</string>
    <string name="welcome_message">Your one stop shop for brand printed apparel</string>


</resources>
