<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/tan_background"
    android:id="@+id/listItemLayout">

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/donut"
        android:contentDescription="@string/images_desc" />

    <TextView
        android:id="@+id/flavorText"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productType"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageItem"
        android:text="@string/plc_flavor"
        android:textColor="#4CAF50"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/flavorVers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="18dp"
        android:layout_toEndOf="@+id/imageItem"
        android:text="@string/plc_version"
        android:textColor="@color/TabText"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageItem"
        android:layout_marginTop="5dp"
        android:background="@color/border_shade"
        android:contentDescription="@string/border" />

    <TextView
        android:id="@+id/productType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flavorVers"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageItem"
        android:textSize="15sp"
        tools:text="@string/plc_product" />

</RelativeLayout>